[gd_scene load_steps=3 format=2]

[ext_resource path="res://nodes/tag_match/node.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0
bg_color = Color( 0.247059, 0.247059, 0.247059, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.498039, 0.498039, 0.498039, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="TagMatchNode" type="GraphNode"]
margin_right = 72.0
margin_bottom = 81.0
mouse_filter = 1
resizable = true
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="Head" type="VBoxContainer" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 145.0
margin_bottom = 101.0

[node name="HBoxContainer" type="HBoxContainer" parent="Head"]
margin_right = 129.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Head/HBoxContainer"]
self_modulate = Color( 0.701961, 0.701961, 0.701961, 1 )
margin_right = 68.0
margin_bottom = 14.0
text = "ï‚° Tag Match"

[node name="MarginContainer" type="MarginContainer" parent="Head/HBoxContainer"]
margin_left = 72.0
margin_right = 88.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RegEx" type="Label" parent="Head/HBoxContainer"]
self_modulate = Color( 1, 1, 1, 0.501961 )
margin_left = 92.0
margin_right = 129.0
margin_bottom = 14.0
size_flags_vertical = 8
text = "RegEx"

[node name="CharacterProfile" type="HBoxContainer" parent="Head"]
margin_top = 18.0
margin_right = 129.0
margin_bottom = 32.0

[node name="Color" type="ColorRect" parent="Head/CharacterProfile"]
margin_right = 15.0
margin_bottom = 14.0
rect_min_size = Vector2( 15, 0 )
size_flags_stretch_ratio = 2.0
color = Color( 0.0588235, 0.407843, 0.956863, 0.435294 )

[node name="Name" type="Label" parent="Head/CharacterProfile"]
margin_left = 19.0
margin_right = 129.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 8.0
text = "{character-name}"

[node name="TagKey" type="Label" parent="Head"]
margin_top = 36.0
margin_right = 129.0
margin_bottom = 58.0
custom_styles/normal = SubResource( 1 )
text = "{tag}"

[node name="MarginContainer" type="MarginContainer" parent="Head"]
margin_top = 62.0
margin_right = 129.0
margin_bottom = 77.0
rect_min_size = Vector2( 0, 15 )
